// Vitest Snapshot v1

exports[`Button > renders correctly 1`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
>
  Follow
</button>
`;

exports[`Button > should render empty button without errors 1`] = `
<button
  class="btn btn-default btn-middle"
  type="button"
/>
`;

exports[`Button > should support link button 1`] = `
<a
  class="btn btn-default btn-middle"
  href="https://ant.design"
  target="_blank"
>
  link button
</a>
`;
